[package]
name = "pin-go"
version = "0.1.0"
authors = ["Luke Miles <luke@lukemil.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.7", default-features = false }
reqwest = "0.9.18"
regex = "1.1.9"
lazy_static = "1.3.0"
serde = "1.0.94"
